--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,11 @@
                 <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                 {{ field | add_class:'form-control' }}
             </div>
-            {{ field.errors }}
+            {% for error in field.errors %}
+            <section class="alert alert-danger" role="alert">
+                {{ field.errors }}
+            </section>
+            {% endfor %}
             {% endfor %}
             <input type="submit" class="btn btn-success" value="Ok">
         </form>
