--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,12 @@
             </section>
             {% endfor %}
             {% endfor %}
+            {% for field in pessoa_form.visible_fields %}
+            <div class="form-group">
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {{ field | add_class:'form-control' }}
+            </div>
+            {% endfor %}
             <input type="submit" class="btn btn-success" value="Ok">
         </form>
     </section>
