--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -8,5 +8,5 @@
         <p>Pesquisa realiza em: {{ form.data_pesquisa.value }}</p>
         <p>Classe do vôo: {{ form.classe_viagem.value }}</p>
         <p>Informações extras: {{ form.informacoes.value }}</p>
-        <p>E-mail: {{ form.email.value }}</p>
+        <p>E-mail: {{ pessoa_form.email.value }}</p>
 {% endblock %}
